--- a/Motocycles/Views/Main/Base.lproj/LaunchScreen.storyboard
+++ b/Motocycles/Views/Main/Base.lproj/LaunchScreen.storyboard
@@ -15,9 +15,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="42017-astronautas" translatesAutoresizingMaskIntoConstraints="NO" id="O63-6O-1f8">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="23478-neon" translatesAutoresizingMaskIntoConstraints="NO" id="O63-6O-1f8">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" red="0.025531572164948502" green="0.025531572164948502" blue="0.025531572164948502" alpha="0.97451636904761907" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.043137259779999999" green="0.0039215688589999999" blue="0.047058824450000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -36,6 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="42017-astronautas" width="1400" height="788"/>
+        <image name="23478-neon" width="1920" height="1080"/>
     </resources>
 </document>
