--- a/Motocycles/Views/Main/Base.lproj/Main.storyboard
+++ b/Motocycles/Views/Main/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="D33-5Y-GQH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="esr-iw-TJq">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -187,12 +188,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="brT-eD-yCc">
-                                <rect key="frame" x="20" y="792" width="374" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="brT-eD-yCc">
+                                <rect key="frame" x="20" y="771" width="92" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="csM-UC-eYR"/>
-                                </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Saltar">
@@ -202,21 +201,31 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="axi-Mp-oFs"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7vZ-T4-reg">
-                                <rect key="frame" x="20" y="20" width="374" height="622"/>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7vZ-T4-reg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="642"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
                             </view>
+                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Ob9-QI-0l2">
+                                <rect key="frame" x="149" y="684" width="116" height="26"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gzp-lL-sP7">
+                                <rect key="frame" x="157" y="746" width="100" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <imageReference key="image" image="mustache" catalog="system" symbolScale="large"/>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="j1q-1f-gJk"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="brT-eD-yCc" firstAttribute="leading" secondItem="j1q-1f-gJk" secondAttribute="leading" constant="20" id="4Fi-KC-ABX"/>
-                            <constraint firstItem="j1q-1f-gJk" firstAttribute="trailing" secondItem="7vZ-T4-reg" secondAttribute="trailing" constant="20" id="647-G9-v8S"/>
-                            <constraint firstItem="brT-eD-yCc" firstAttribute="top" secondItem="7vZ-T4-reg" secondAttribute="bottom" constant="150" id="69f-iQ-Z4x"/>
-                            <constraint firstItem="7vZ-T4-reg" firstAttribute="leading" secondItem="j1q-1f-gJk" secondAttribute="leading" constant="20" id="YEe-4r-mr8"/>
-                            <constraint firstItem="j1q-1f-gJk" firstAttribute="bottom" secondItem="brT-eD-yCc" secondAttribute="bottom" constant="20" id="tKE-z3-zDj"/>
-                            <constraint firstItem="j1q-1f-gJk" firstAttribute="trailing" secondItem="brT-eD-yCc" secondAttribute="trailing" constant="20" id="vMf-XF-VFc"/>
-                            <constraint firstItem="7vZ-T4-reg" firstAttribute="top" secondItem="YzK-ce-QXp" secondAttribute="top" constant="20" id="xTj-VJ-tZT"/>
+                            <constraint firstItem="j1q-1f-gJk" firstAttribute="trailing" secondItem="7vZ-T4-reg" secondAttribute="trailing" id="647-G9-v8S"/>
+                            <constraint firstItem="7vZ-T4-reg" firstAttribute="leading" secondItem="j1q-1f-gJk" secondAttribute="leading" id="YEe-4r-mr8"/>
+                            <constraint firstItem="7vZ-T4-reg" firstAttribute="top" secondItem="YzK-ce-QXp" secondAttribute="top" id="xTj-VJ-tZT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="JHu-Hf-lM4"/>
@@ -227,6 +236,96 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E1a-aR-RX5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1876.8115942028987" y="63.616071428571423"/>
+        </scene>
+        <!--Onboarding View-->
+        <scene sceneID="eCM-sW-1pQ">
+            <objects>
+                <viewController id="esr-iw-TJq" customClass="OnboardingView" customModule="Motocycles" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cI3-Gt-Qbz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2s3-cN-7Mi">
+                                <rect key="frame" x="157" y="732" width="100" height="100"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="2RS-ed-6Zk"/>
+                                    <constraint firstAttribute="height" constant="100" id="nA9-de-d1Z"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <imageReference key="image" image="chevron.right" catalog="system" symbolScale="large"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="btnOk:" destination="esr-iw-TJq" eventType="touchUpInside" id="2fK-WQ-LTk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rE8-iR-9Xb">
+                                <rect key="frame" x="20" y="770.5" width="117" height="35.5"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Saltar">
+                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="18"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="btnSkipt:" destination="esr-iw-TJq" eventType="touchUpInside" id="UfX-A0-PbE"/>
+                                </connections>
+                            </button>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="2rh-Qc-zP9">
+                                <rect key="frame" x="149.5" y="646" width="115.5" height="26"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" systemColor="systemRedColor"/>
+                            </pageControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z1p-eU-7DK">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="646"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bdF-po-vaF">
+                                    <size key="itemSize" width="412" height="591"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="idItemOnb" id="idC-kX-YqX">
+                                        <rect key="frame" x="0.0" y="29.5" width="411" height="587"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9Ni-4g-4BF">
+                                            <rect key="frame" x="0.0" y="0.0" width="411" height="587"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="411" height="587"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Wnq-M8-efE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="top" secondItem="2rh-Qc-zP9" secondAttribute="bottom" constant="60" id="2Is-Fy-uD1"/>
+                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="leading" secondItem="rE8-iR-9Xb" secondAttribute="trailing" constant="20" id="FAJ-w0-ChG"/>
+                            <constraint firstItem="rE8-iR-9Xb" firstAttribute="leading" secondItem="Wnq-M8-efE" secondAttribute="leading" constant="20" id="Qd0-Wr-ACs"/>
+                            <constraint firstItem="Wnq-M8-efE" firstAttribute="trailing" secondItem="z1p-eU-7DK" secondAttribute="trailing" id="U4x-u7-Xg4"/>
+                            <constraint firstItem="2rh-Qc-zP9" firstAttribute="top" secondItem="z1p-eU-7DK" secondAttribute="bottom" id="X2B-58-m3X"/>
+                            <constraint firstItem="Wnq-M8-efE" firstAttribute="bottom" secondItem="rE8-iR-9Xb" secondAttribute="bottom" constant="56" id="bwR-PP-wmH"/>
+                            <constraint firstItem="z1p-eU-7DK" firstAttribute="leading" secondItem="Wnq-M8-efE" secondAttribute="leading" id="ehF-jX-WTs"/>
+                            <constraint firstItem="2rh-Qc-zP9" firstAttribute="centerX" secondItem="Wnq-M8-efE" secondAttribute="centerX" id="gjP-Ax-psg"/>
+                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="centerX" secondItem="Wnq-M8-efE" secondAttribute="centerX" id="rWg-DR-8u1"/>
+                            <constraint firstItem="z1p-eU-7DK" firstAttribute="top" secondItem="cI3-Gt-Qbz" secondAttribute="top" id="w1x-HF-Sal"/>
+                            <constraint firstItem="Wnq-M8-efE" firstAttribute="bottom" secondItem="2s3-cN-7Mi" secondAttribute="bottom" constant="30" id="ydg-Pu-HZB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="btnOK" destination="2s3-cN-7Mi" id="TX2-ZQ-C10"/>
+                        <outlet property="btnSkip" destination="rE8-iR-9Xb" id="W0F-ue-7mv"/>
+                        <outlet property="collectionV" destination="z1p-eU-7DK" id="TGb-hA-scg"/>
+                        <outlet property="pageControl" destination="2rh-Qc-zP9" id="KyM-9c-vAp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7kT-1s-sAg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1876.8115942028987" y="816.96428571428567"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RE1-bb-s7p">
@@ -248,17 +347,25 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.right" catalog="system" width="96" height="128"/>
+        <image name="mustache" catalog="system" width="128" height="52"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
